@@ -9,6 +9,7 @@ New features:
 ..F....... [ZBXNEXT-1851] hid American English, Greek and Polish translations from the frontend (Richlv)
 
 Bug fixes:
+........S. [ZBX-7186] fixed recovery-awaiting escalations staying in the database forever if their action, trigger or item is deleted (asaveljevs)
 ..F....... [ZBX-7280] fixed map background in IE10 (Eduard)
 ..F....... [ZBX-7276] fixed count of displaying hosts in proxy list (Eduard)
 ..F....PS. [ZBX-7299] fixed dashboard widget drag'n'drop not working on PHP setups without JSON (Pavels)
